mobile scroll check

--- a/work.html
+++ b/work.html
@@ -592,6 +592,8 @@
                 mousewheel: true, // Enables mouse wheel scrolling
                 grabCursor: false, // Shows grab cursor for better UX
                 touchEventsTarget: "container", // Enables touch gestures
+                simulateTouch: true, // ✅ Enables touch interactions
+
                 on: {
                     touchMove: () => {
                         console.log('Moblie Touch')
